Big portfolio update

--- a/HomeIllustrator.html
+++ b/HomeIllustrator.html
@@ -77,6 +77,11 @@
         box-shadow: 5px 5px 20px 1px;
         height: 400px;
         margin: 20px;
+        image-resolution: 72dpi;
+      }
+
+      .grid_image img:hover {
+        height: 600px;
       }
 
       #current {
@@ -260,6 +265,11 @@
         box-shadow: 5px 5px 20px 1px;
         height: 300px;
         margin: 30px;
+        image-resolution: 72dpi;
+      }
+
+      .grid_image img:hover {
+        height: 500px;
       }
 
       #current {
@@ -463,31 +473,31 @@
 
           <div class="image_grid">
             <div class="grid_image">
-              <img src="images/Illustrator/SusansKitchen.jpg" alt="Restaurant Ad">
+              <img src="images/Illustrator/SusansKitchen_Medium.jpeg" alt="Restaurant Ad">
             </div>
 
             <div class="grid_image">
-              <img src="images/Illustrator/Spider-man.jpg" alt="Spiderverse Poster">
+              <img src="images/Illustrator/Spider-man_Medium.jpeg" alt="Spiderverse Poster">
             </div>
 
             <div class="grid_image">
-              <img src="images/Illustrator/Wishtree.jpg" alt="Wishtree Book">
+              <img src="images/Illustrator/Wishtree_Medium.jpeg" alt="Wishtree Book">
             </div>
 
             <div class="grid_image">
-              <img src="images/Illustrator/GA_Flyer.jpg" alt="Brand Flyer">
+              <img src="images/Illustrator/GA_Flyer_Medium.jpeg" alt="Brand Flyer">
             </div>
 
             <div class="grid_image">
-              <img src="images/Illustrator/FreshProduce.jpg" alt="Produce Ad">
+              <img src="images/Illustrator/FreshProduce_Medium.jpeg" alt="Produce Ad">
             </div>
 
             <div class="grid_image">
-              <img src="images/Illustrator/FreshProduce_Logo.png" alt="Produce Logo">
+              <img src="images/Illustrator/FreshProduce_Logo_Medium.png" alt="Produce Logo">
             </div>
 
             <div class="grid_image">
-              <img src="images/Illustrator/WoC_Logo.png" alt="Event Logo">
+              <img src="images/Illustrator/WoC_Logo_Medium.png" alt="Event Logo">
             </div>
 
             <div class="grid_image">
