--- a/HomeIndesign.html
+++ b/HomeIndesign.html
@@ -74,9 +74,14 @@
       }
 
       .grid_image img {
+        box-sizing: border-box;
         box-shadow: 5px 5px 20px 1px;
         height: 400px;
         margin: 20px;
+      }
+
+      .grid_image img:hover {
+        height: 600px
       }
 
       #current {
@@ -260,6 +265,10 @@
         box-shadow: 5px 5px 20px 1px;
         height: 300px;
         margin: 30px;
+      }
+
+      .grid_image img:hover {
+        height: 500px;
       }
 
       #current {
@@ -463,23 +472,42 @@
 
           <div class="image_grid">
             <div class="grid_image">
-              <img src="images/InDesign/FlavorsPizza.jpg" alt="Two-Page Spread">
+              <img src="images/InDesign/FlavorsPizzaMedium.jpeg" alt="Two-Page Spread">
             </div>
 
             <div class="grid_image">
-              <img src="images/InDesign/Summerwear.jpg" alt="Summer Catalogue">
+              <img src="images/InDesign/SummerwearMedium.jpeg" alt="Summer Catalogue">
             </div>
 
             <div class="grid_image">
-              <img src="images/InDesign/ModernTouch.jpg" alt="Furniture Catalogue">
+              <img src="images/InDesign/JGonzalez_FallFashion_Catalogue2Medium.jpeg" alt="Summer page 2">
+              <img src="images/InDesign/JGonzalez_FallFashion_Catalogue3Medium.jpeg" alt="summer page 3">
             </div>
 
             <div class="grid_image">
-              <img src="images/InDesign/First_Brochure1.jpg" alt="First Institute Brochure">
+              <img src="images/InDesign/JGonzalez_FallFashion_Catalogue4Medium.jpeg" alt="Summer Catalogue">
             </div>
 
             <div class="grid_image">
-              <img src="images/InDesign/First_Brochure2.jpg" alt="First Institute Brochure">
+              <img src="images/InDesign/ModernTouchMedium.jpeg" alt="Furniture Catalogue">
+            </div>
+
+            <div class="grid_image">
+              <img src="images/InDesign/JGonzalez_Furniture Catalogue2Medium.jpeg" alt="Furniture Catalogue">
+              <img src="images/InDesign/JGonzalez_Furniture Catalogue3Medium.jpeg" alt="Furniture Catalogue">
+            </div>
+
+            <div class="grid_image">
+              <img src="images/InDesign/JGonzalez_Furniture Catalogue4Medium.jpeg" alt="Furniture Catalogue">
+              <img src="images/InDesign/JGonzalez_Furniture Catalogue5Medium.jpeg" alt="Furniture Catalogue">
+            </div>
+
+            <div class="grid_image">
+              <img src="images/InDesign/First_Brochure1Medium.jpeg" alt="First Institute Brochure">
+            </div>
+
+            <div class="grid_image">
+              <img src="images/InDesign/First_Brochure2Medium.jpeg" alt="First Institute Brochure">
             </div>
           </div>
         </div>
