--- a/HomePhotoshop.html
+++ b/HomePhotoshop.html
@@ -32,7 +32,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: baseline;
+        align-items: center;
       }
 
       #selected {
@@ -77,6 +77,10 @@
         box-shadow: 5px 5px 20px 1px;
         height: 400px;
         margin: 20px;
+      }
+
+      .grid_image img:hover {
+        height: 600px;
       }
 
       #current {
@@ -260,6 +264,10 @@
         box-shadow: 5px 5px 20px 1px;
         height: 300px;
         margin: 30px;
+      }
+
+      .grid_image img:hover {
+        height: 500px;
       }
 
       #current {
@@ -463,23 +471,20 @@
 
           <div class="image_grid">
             <div class="grid_image">
-              <img src="images/Photoshop/Little_Explorer.jpg" alt="Pisces Art">
+              <img src="images/Photoshop/Little_Explorer_Medium.jpeg" alt="Mini Explorer">
             </div>
 
             <div class="grid_image">
-              <img src="images/Photoshop/Lava_DoubleExposure.jpg" alt="Aries Art">
+              <img src="images/Photoshop/Lava_DoubleExposure_Medium.jpeg" alt="Double Exposure">
             </div>
 
             <div class="grid_image">
-              <img src="images/Photoshop/Smoothie_Mockup.jpg" alt="Taurus Art">
+              <img src="images/Photoshop/Smoothie_Mockup_Medium.jpeg" alt="Mockup">
             </div>
 
             <div class="grid_image">
-              <img src="images/Photoshop/Black_Adam_P1.jpg" alt="Gemini Art">
-            </div>
-
-            <div class="grid_image">
-              <img src="images/Photoshop/Black_Adam_P2.jpg" alt="Cancer Art">
+              <img src="images/Photoshop/Black_Adam_P1_Medium.jpeg" alt="Poster Art 1">
+              <img src="images/Photoshop/Black_Adam_P2_Medium.jpeg" alt="Poster Art 2">
             </div>
           </div>
         </div>
