--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: baseline;
+        align-items: center;
       }
 
       #selected {
@@ -76,6 +76,10 @@
         box-shadow: 5px 5px 20px 1px;
         height: 400px;
         margin: 20px;
+      }
+
+      .grid_image img:hover{
+        height: 600px;
       }
 
       #current {
@@ -259,6 +263,10 @@
         box-shadow: 5px 5px 20px 1px;
         height: 300px;
         margin: 30px;
+      }
+
+      .grid_image img:hover {
+        height: 500px;
       }
 
       #current {
@@ -460,31 +468,31 @@
           </ul>
           <div class="image_grid">
             <div class="grid_image">
-              <img src="images/Pisces.jpg" alt="Pisces Art">
+              <img src="images/Pisces_Medium.jpeg" alt="Pisces Art">
             </div>
 
             <div class="grid_image">
-              <img src="images/Aries.jpg" alt="Aries Art">
+              <img src="images/Aries_Medium.jpeg" alt="Aries Art">
             </div>
 
             <div class="grid_image">
-              <img src="images/Taurus.jpg" alt="Taurus Art">
+              <img src="images/Taurus_Medium.jpeg" alt="Taurus Art">
             </div>
 
             <div class="grid_image">
-              <img src="images/Gemini.jpg" alt="Gemini Art">
+              <img src="images/Gemini_Medium.jpeg" alt="Gemini Art">
             </div>
 
             <div class="grid_image">
-              <img src="images/Cancer.jpg" alt="Cancer Art">
+              <img src="images/Cancer_Medium.jpeg" alt="Cancer Art">
             </div>
 
             <div class="grid_image">
-              <img src="images/Leo.jpg" alt="Leo Art">
+              <img src="images/Leo_Medium.jpeg" alt="Leo Art">
             </div>
 
             <div class="grid_image">
-              <img src="images/Virgo.JPG" alt="Virgo Art">
+              <img src="images/Virgo_Medium.JPEG" alt="Virgo Art">
             </div>
           </div>
         </div>
