--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             </div>
 
             <div class="grid_image">
-              <img src="images/Virgo_Medium.JPEG" alt="Virgo Art">
+              <img src="images/Virgo_Medium.jpeg" alt="Virgo Art">
             </div>
           </div>
         </div>
