--- a/georgerrmartin/index.html
+++ b/georgerrmartin/index.html
@@ -48,7 +48,7 @@
 
         <div id="card">
           <img src="../images/GRRM-SMALL-cocteau3.jpeg"
-          alt="The Jean Cocteau Cinema | GRRM's Theater">
+          alt="The Jean Cocteau Cinema | GRRM's THEATER">
 
           <img src="../images/newsletter-home.png"
           alt="George R. R. Martin Newsletter | SIGN UP NOW">
@@ -162,7 +162,7 @@
       </footer>
 
       <div id="bottom">
-        
+
       </div>
 
     </div>
