--- a/assignments/georgerrmartin/index.html
+++ b/assignments/georgerrmartin/index.html
@@ -18,90 +18,111 @@
 
       <header>
         <div id="shield"></div>
-        <h1>GEORGE R. R. MARTIN</h1>
+        <h1 style="
+        font-size: 60px;
+        color: #1c4268;
+        ">
+          GEORGE R. R. MARTIN
+        </h1>
         <div id="social">
-          <a href="#">
-            <img src="../images/facebook-overall.jpeg" alt="facebook"/>
-          </a>
-          <a href="#">
-            <img src="../images/twitter-overall.jpeg" alt="twitter"/>
-          </a>
-          <a href="#">
-            <img src="../images/app-overall.jpeg" alt="westros"/>
-          </a>
+          <div style="text-align: right; margin: 16px 0px 0px 0px;">
+            <a href="#">
+              <img src="../../images/facebook-overall.jpeg" alt="facebook"/>
+            </a>
+            <a href="#">
+              <img src="../../images/twitter-overall.jpeg" alt="twitter"/>
+            </a>
+            <a href="#">
+              <img src="../../images/app-overall.jpeg" alt="westros"/>
+            </a>
+          </div>
         </div>
       </header>
 
-        <nav>
-          <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">NOT A BLOG</a></li>
-            <li><a href="#">ABOUT GEORGE</a></li>
-            <li><a href="#">BOOKS</a></li>
-            <li><a href="#">FOR FANS</a></li>
-            <li><a href="#">NEWS</a></li>
-            <li><a href="#">MERCHANDISE</a></li>
-          </ul>
-        </nav>
+      <div style="
+      grid-column: 2/5;
+      grid-row: 3/7;
+      background-image: url(../../images/columns-home.jpeg);
+      background-position: center top;
+      background-repeat: repeat-y;
+      width: 1000px;
+      margin: 0 auto;
+      ">
+      </div>
 
-        <div id="banner"></div>
+      <nav>
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">NOT A BLOG</a></li>
+          <li><a href="#">ABOUT GEORGE</a></li>
+          <li><a href="#">BOOKS</a></li>
+          <li><a href="#">FOR FANS</a></li>
+          <li><a href="#">NEWS</a></li>
+          <li><a href="#">MERCHANDISE</a></li>
+        </ul>
+      </nav>
 
-        <div id="card">
-          <img src="../images/GRRM-SMALL-cocteau3.jpeg"
-          alt="The Jean Cocteau Cinema | GRRM's THEATER">
+      <div id="banner"></div>
 
-          <img src="../images/newsletter-home.png"
-          alt="George R. R. Martin Newsletter | SIGN UP NOW">
+      <div id="card">
+        <img src="../../images/GRRM-SMALL-cocteau3.jpeg"
+        alt="The Jean Cocteau Cinema | GRRM's THEATER">
 
-          <img src="../images/callout-sample-3.jpeg"
-          alt="DarkSword Minatures | Now Available | LEARN MORE">
+        <img src="../../images/newsletter-home.png"
+        alt="George R. R. Martin Newsletter | SIGN UP NOW">
+
+        <img src="../../images/callout-sample-3.jpeg"
+        alt="DarkSword Minatures | Now Available | LEARN MORE">
+      </div>
+
+      <aside id="sidenav">
+        <div class="callout_bg">
+          <div id="NextAppearance">
+            <h3>NEXT APPEARANCE</h3>
+            <div>
+              <div id="date" style="color: #dbbf73">
+                September 1-5 2022
+              </div>
+              <div id="location" style="font-family: Verdana, Geneva, sans-serif">
+                2022 Worldcon in Chicago, Chicon 8
+              </div>
+              <div>
+                <img src="../../images/more-appearances.jpeg" alt="More Appearances">
+              </div>
+            </div>
+          </div>
         </div>
 
-        <aside id="sidenav">
-          <div class="callout_bg">
-            <div id="NextAppearance">
-              <h3>NEXT APPEARANCE</h3>
+        <div class="callout_bg">
+          <div id="NextPublication">
+            <h3>NEXT PUBLICATION</h3>
+            <div>
+              <div id="message">Check back soon for information on future releases.</div>
               <div>
-                <div id="date" style="color: #dbbf73">
-                  September 1-5 2022
-                </div>
-                <div id="location" style="font-family: Verdana, Geneva, sans-serif">
-                  2022 Worldcon in Chicago, Chicon 8
-                </div>
-                <div>
-                  <img src="../images/more-appearances.jpeg" alt="More Appearances">
-                </div>
+                <img src="../../images/view-pubs.png" alt="View Publications">
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="callout_bg">
-            <div id="NextPublication">
-              <h3>NEXT PUBLICATION</h3>
-              <div>
-                <div id="message">Check back soon for information on future releases.</div>
-                <div>
-                  <img src="../images/view-pubs.png" alt="View Publications">
-                </div>
-              </div>
-            </div>
+        <div class="callout_bg">
+          <div id="Valyrian">
+            <img src="../../images/Valyrian-steel-v3.jpeg" alt="Valyrian Steel">
           </div>
+        </div>
 
-          <div class="callout_bg">
-            <div id="Valyrian">
-              <img src="../images/Valyrian-steel-v3.jpeg" alt="Valyrian Steel">
-            </div>
+        <div class="callout_bg" style="padding: 2px 0px 2px 10px;">
+          <div id="stageCoach">
+            <img src="../../images/stagecoach-v2.jpeg" alt="Stagecoach Foundation">
           </div>
+        </div>
+      </aside>
 
-          <div class="callout_bg">
-            <div id="stageCoach">
-              <img src="../images/stagecoach-v2.jpeg" alt="Stagecoach Foundation">
-            </div>
-          </div>
-        </aside>
-
-        <main>
-          <h2>Current GRRM Blog Posts</h2>
+      <main>
+        <div>
+          <img src="../../images/current-blogs.png" alt="Current GRRM Blog Posts">
+        </div>
+        <div id="news">
           <h3><a href="#">The Dragons are Coming...</a></h3>
           <p>
             … they’re on the wing, and will be arriving in August.
@@ -155,7 +176,8 @@
             have three new books in the pipeline.   FULL HOUSE will be a collection
             of… <a href="#">Read More >></a>
           </p>
-        </main>
+        </div>
+      </main>
 
       <footer id="footer">
         © 2022 GEORGE R.R. MARTIN. ALL RIGHTS RESERVED.
