--- a/assignments/georgerrmartin/index.html
+++ b/assignments/georgerrmartin/index.html
@@ -104,8 +104,10 @@
             </div>
           </div>
         </div>
-
-        <div class="callout_bg">
+        <div>
+          <img src="../../images/left-shoe-1.jpeg" alt="gutter">
+        </div>
+        <div class="callout_bg" style="padding: 2px 0px 2px 10px;">
           <div id="Valyrian">
             <img src="../../images/Valyrian-steel-v3.jpeg" alt="Valyrian Steel">
           </div>
