--- a/HomeIllustrator.html
+++ b/HomeIllustrator.html
@@ -142,12 +142,13 @@
       }
 
       .footer {
-        background-color: #ffcc00;
-        color: #232328;
+        border-top: 2px solid #ffcc00;
+        background-color: #232328;
+        color: white;
         width: auto;
         padding: 30px;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 3fr;
         grid-auto-rows: minmax(20px, auto);
         grid-template-areas:
             "head head head"
@@ -328,13 +329,14 @@
       }
 
       .footer {
+        border-top: 2px solid #ffcc00;
         background-color: #ffcc00;
         font-size: 14px;
         color: #232328;
         width: auto;
         padding: 40px;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 3fr;
         grid-auto-rows: minmax(20px, auto);
         grid-template-areas:
             "head head head"
