--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -2,386 +2,7 @@
 <html lang="en-US">
   <head>
     <title>Gemini Artworks Contact</title>
-
-    <style>
-
-    @media screen and (min-width: 620px) {
-      #nav_bar ul {
-        color: white;
-        background: #232328;
-        box-shadow: 0px 2px 0px 0px #ffcc00;
-        padding-inline-start: 0px;
-        margin-top: 0px;
-        font-size: 20px;
-      }
-
-      #nav_bar ul li {
-        display: inline-block;
-        padding: 12px 24px;
-      }
-
-      #nav_bar {
-        position: fixed;
-        z-index: 5;
-        width: 100%;
-      }
-
-
-      .left_link {
-        list-style-type: none;
-      }
-
-      #logo {
-        color: #ffcc00;
-        font-size: 32px;
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        top: 35%;
-      }
-
-      .right_link {
-        list-style-type: none;
-        float: right;
-      }
-
-      #current {
-        color: #ffcc00;
-      }
-
-      .title {
-        text-align: center;
-        color: #ffcc00;
-        font-size: 48px;
-        font-family: times;
-        font-weight: lighter;
-        margin: auto;
-        padding-top: 60px;
-      }
-
-      .text_boxes {
-        text-align: left;
-        background-color: white;
-        border: 1px solid #ffcc00;
-        border-radius: 10px;
-        box-shadow: 0px 5px 5px 2px;
-        padding-left: 10px;
-        width: 400px;
-        display: block;
-        font-size: 14px;
-        margin: auto;
-        margin-top: 10px;
-      }
-
-      #section2 ul li:hover {
-        opacity: 50%;
-      }
-
-      #comment {
-        text-align: left;
-        background-color: white;
-        border: 1px solid #ffcc00;
-        border-radius: 10px;
-        box-shadow: 0px 5px 5px 2px;
-        padding-left: 10px;
-        width: 400px;
-        height: 200px;
-        display: block;
-        font-size: 14px;
-        margin: auto;
-        margin-top: 10px;
-      }
-
-      #section2 {
-        background: #232328;
-        margin: auto;
-        border-radius: 20px;
-        padding-top: 80px;
-        width: 60%;
-        height: 800px;
-        display: block;
-      }
-
-      #section2 article ul {
-        padding-inline-start: 0px;
-      }
-
-      .DM {
-        color: white;
-        text-align: center;
-        display: block;
-      }
-
-      #icon_links ul li{
-        list-style-type: none;
-        margin: 20px;
-      }
-
-      #icon_links ul {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        padding-inline-start: 0px;
-      }
-
-      .icon img {
-        height: 40px;
-      }
-
-      main {
-        font-family: times;
-      }
-
-      header {
-        font-family: times;
-      }
-
-      body {
-        margin: 0px;
-        background-image: url('Space_Background.jpg');
-        background-size: 1920px 1080px;
-      }
-
-      .footer {
-        background-color: #ffcc00;
-        color: #232328;
-        width: 95%;
-        padding: 30px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-auto-rows: minmax(20px, auto);
-        grid-template-areas:
-            "head head head"
-            "Line1-1 Line1-2 Line1-3"
-            "Line2-1 Line2-2 Line2-3"
-            "Line3-1 Line3-2 Line3-3"
-            "Contact Contact2 Contact3"
-            "Copyright Copyright2 Copyright3";
-        gap: 10px 10px;
-      }
-
-      #head {
-        grid-area: head;
-        font-size: 24px;
-        border-bottom: 1px solid #232328;
-      }
-      #row1 {
-        grid-area: Line1-1;
-      }
-      #row2 {
-        grid-area: Line2-1;
-      }
-      #row3 {
-        grid-area: Line3-1;
-      }
-      #row1-2 {
-        grid-area: Line1-2;
-      }
-      #row2-2 {
-        grid-area: Line2-2;
-      }
-      #phone {
-        grid-area: Contact2;
-      }
-      #email {
-        grid-area: Contact;
-      }
-      #insta {
-        grid-area: Contact3;
-      }
-    }
-
-    @media screen and (max-width: 619px) {
-      #nav_bar ul {
-        color: white;
-        background: #232328;
-        box-shadow: 0px 2px 0px 0px #ffcc00;
-        padding-inline-start: 0px;
-        margin-top: 0px;
-        font-size: 20px;
-      }
-
-      #nav_bar ul li {
-        display: inline-block;
-        padding: 12px 24px;
-      }
-
-      #nav_bar {
-        position: fixed;
-        z-index: 5;
-        width: 100%;
-      }
-
-
-      .left_link {
-        list-style-type: none;
-      }
-
-      #logo {
-        display: none;
-        color: #ffcc00;
-        font-size: 32px;
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        top: 35%;
-      }
-
-      .right_link {
-        list-style-type: none;
-        float: right;
-      }
-
-      #current {
-        color: #ffcc00;
-      }
-
-      .title {
-        text-align: center;
-        color: #ffcc00;
-        font-size: 48px;
-        font-family: times;
-        font-weight: lighter;
-        margin: auto;
-        padding-top: 60px;
-      }
-
-      .text_boxes {
-        text-align: left;
-        background-color: white;
-        border: 1px solid #ffcc00;
-        border-radius: 10px;
-        box-shadow: 0px 5px 5px 2px;
-        padding-left: 10px;
-        width: 300px;
-        display: block;
-        font-size: 14px;
-        margin: auto;
-        margin-top: 10px;
-      }
-
-      #section2 ul li:hover {
-        opacity: 50%;
-      }
-
-      #comment {
-        text-align: left;
-        background-color: white;
-        border: 1px solid #ffcc00;
-        border-radius: 10px;
-        box-shadow: 0px 5px 5px 2px;
-        padding-left: 10px;
-        width: 300px;
-        height: 200px;
-        display: block;
-        font-size: 14px;
-        margin: auto;
-        margin-top: 10px;
-      }
-
-      #section2 {
-        background: #232328;
-        margin: auto;
-        border-radius: 20px;
-        padding-top: 80px;
-        width: 90%;
-        height: 800px;
-        display: block;
-      }
-
-      #section2 article ul {
-        padding-inline-start: 0px;
-      }
-
-      .DM {
-        color: white;
-        text-align: center;
-        display: block;
-      }
-
-      #icon_links ul li{
-        list-style-type: none;
-        margin: 20px;
-      }
-
-      #icon_links ul {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        padding-inline-start: 0px;
-      }
-
-      .icon img {
-        height: 40px;
-      }
-
-      main {
-        font-family: times;
-      }
-
-      header {
-        font-family: times;
-      }
-
-      body {
-        margin: 0px;
-        background-image: url('Space_Background.jpg');
-        background-size: 1920px 1080px;
-      }
-
-      .footer {
-        background-color: #ffcc00;
-        color: #232328;
-        width: 90%;
-        padding: 30px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-auto-rows: minmax(20px, auto);
-        grid-template-areas:
-            "head head head"
-            "Line1-1 Line1-2 Line1-3"
-            "Line2-1 Line2-2 Line2-3"
-            "Line3-1 Line3-2 Line3-3"
-            "Contact Contact2 Contact3"
-            "Copyright Copyright2 Copyright3";
-        gap: 10px 10px;
-      }
-
-      #head {
-        grid-area: head;
-        font-size: 24px;
-        border-bottom: 1px solid #232328;
-      }
-      #row1 {
-        grid-area: Line1-1;
-      }
-      #row2 {
-        grid-area: Line2-1;
-      }
-      #row3 {
-        grid-area: Line3-1;
-      }
-      #row1-2 {
-        grid-area: Line1-2;
-      }
-      #row2-2 {
-        grid-area: Line2-2;
-      }
-      #phone {
-        grid-area: Contact2;
-      }
-      #email {
-        grid-area: Contact;
-      }
-      #insta {
-        grid-area: Contact3;
-      }
-    }
-    </style>
+    <link rel="stylesheet" href="css/contact-page.css">
 
   </head>
   <body>
@@ -407,65 +28,38 @@
               </li>
             </ul>
         </nav>
-        <br><br>
-        <h1 class="title">Contact</h1>
-
-        <h3 style="
-        color: white;
-        text-align: center;
-        font-weight: lighter;
-        margin: 20px;
-        ">
-          Message me with any questions, comments, or requests. I would love to share my
-          passion with you!
-        </h3>
     </header>
-    <br><br><br>
+
         <main>
-          <section id="section2">
-            <article>
-              <ul>
-                <li class="text_boxes">
-                  <p>Name</p>
-                </li>
-                <br><br><br>
-                <li class="text_boxes">
-                  <p>Email</p>
-                </li>
-                <br><br><br>
-                <li class="text_boxes">
-                  <p>Phone</p>
-                </li>
-                <br><br><br>
-                <li id="comment">
-                  <p>Comment</p>
-                </li>
-              </ul>
-            </article>
-            <br><br>
-            <div class="DM">
-              <p>Checkout my social media</p>
-              <hr>
-              <div id="icon_links">
-                <ul>
-                  <li class="icon">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/640px-Instagram_icon.png"
-                    alt="Instagram">
-                  </li>
-                  <li class="icon">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/2491px-Twitter-logo.svg.png"
-                    alt="Twitter">
-                  </li>
-                  <li class="icon">
-                    <img src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png"
-                    alt="Discord">
-                  </li>
-                </ul>
-              </div>
+          <section id="contact-grid">
+            <h1 style="grid-area: head">Contact</h1>
+            <p style="grid-area: message">
+              Any questions, comments, or requests? Send me a message along with
+              a way to contact you so that I may respond when I am available.
+            </p>
+            <div class="Input" id="Nameinput">
+              <label for="Nameinput">Name -</label>
+              <input type="text" id="NInput" name="Name">
+            </div>
+            <div class="Input" id="Emailinput">
+              <label for="Nameinput">Email -</label>
+              <input type="text" id="EInput" name="Email">
+            </div>
+            <div class="Input" id="Phoneinput">
+              <label for="Nameinput">Phone -</label>
+              <input type="text" id="PInput" name="Phone">
+            </div>
+            <div id="comment">
+              <label for="Comment">Comment</label>
+              <br>
+              <textarea id="Comment" style="font-family: 'helveticaneue'"></textarea>
+            </div>
+            <div id="submitButton">
+              <input type="submit" name="submit" value="SUBMIT">
             </div>
           </section>
         </main>
-        <br><br><br>
+
         <footer>
           <div>
             <div class="footer">
@@ -476,7 +70,7 @@
                 Gallery -
                 <a href="HomeIllustrator.html"
                 style="text-decoration: none;
-                color: #232328;">
+                color: white;">
                   Illustrator
                 </a>
               </div>
@@ -484,7 +78,7 @@
                 Gallery -
                 <a href="HomePhotoshop.html"
                 style="text-decoration: none;
-                color: #232328;">
+                color: white;">
                   Photoshop
                 </a>
               </div>
@@ -492,21 +86,21 @@
                 Gallery -
                 <a href="HomeIndesign.html"
                 style="text-decoration: none;
-                color: #232328;">
+                color: white;">
                   Indesign
                 </a>
               </div>
               <div id="row1-2">
                 <a href="Contact_Page.html"
                 style="text-decoration: none;
-                color: #232328;">
+                color: white;">
                   Contact
                 </a>
               </div>
               <div id="row2-2">
                 <a href="About_Me.html"
                 style="text-decoration: none;
-                color: #232328;">
+                color: white;">
                   About Me
                 </a>
               </div>
