--- a/assignments/assignment16_Popup.html
+++ b/assignments/assignment16_Popup.html
@@ -86,6 +86,7 @@
         background-repeat: no-repeat;
         background-position: center;
         background-size: contain;
+        background-color: rgba(0, 0, 0, 0.7);
         height: 100%;
         width: 100%;
         z-index: 0;
