--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en-US">
   <head>
     <title>Gemini Artworks Portfolio</title>
-    <link rel="stylesheet" href="css/Portfolio-home.css">
-
+    <link type="text/css" rel="stylesheet" href="css/Portfolio.css">
   </head>
   <body>
 
@@ -35,7 +34,7 @@
         <!-- Logo -->
         <img src="Gemini_Artworks_Icon2.png" alt="Gemini Artworks Logo"
         style="
-        height: 300px;
+        height: 200px;
         display: block;
         margin: auto;
         padding-top: 60px;
@@ -134,7 +133,7 @@
             Gallery -
             <a href="HomeIllustrator.html"
             style="text-decoration: none;
-            color: #ffcc00;">
+            color: white;">
               Illustrator
             </a>
           </div>
@@ -142,7 +141,7 @@
             Gallery -
             <a href="HomePhotoshop.html"
             style="text-decoration: none;
-            color: #ffcc00;">
+            color: white;">
               Photoshop
             </a>
           </div>
@@ -150,21 +149,21 @@
             Gallery -
             <a href="HomeIndesign.html"
             style="text-decoration: none;
-            color: #ffcc00;">
+            color: white;">
               Indesign
             </a>
           </div>
           <div id="row1-2">
             <a href="Contact_Page.html"
             style="text-decoration: none;
-            color: #ffcc00;">
+            color: white;">
               Contact
             </a>
           </div>
           <div id="row2-2">
             <a href="About_Me.html"
             style="text-decoration: none;
-            color: #ffcc00;">
+            color: white;">
               About Me
             </a>
           </div>
