--- a/HomePhotoshop.html
+++ b/HomePhotoshop.html
@@ -2,384 +2,7 @@
 <html lang="en-US">
   <head>
     <title>Portfolio</title>
-
-    <style>
-
-    @media screen and (min-width: 600px) {
-      .gallery_pages {
-        padding: 0px;
-      }
-
-      .examples_title {
-        background-color: #232328;
-        border-top: 2px solid #ffcc00;
-        display: block;
-        margin: 0px;
-        height: 50px;
-      }
-
-      #workExamples {
-        color: white;
-        text-align: center;
-        padding-top: 10px;
-        margin: 0px;
-      }
-
-      .image_grid {
-        padding: 40px;
-        position: relative;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-      }
-
-      #selected {
-        display: inline-block;
-        color: rgba(0, 153, 153, 1);
-        background-color: rgba(56, 60, 71, 0.5);
-        border: 1px solid; padding: 10px;
-        font-size: 24px;
-        width: auto;
-        margin: 30px;
-        list-style: outside none none;
-      }
-
-      .left_link {
-        list-style-type: none;
-      }
-
-      #logo {
-        color: #ffcc00;
-        font-size: 32px;
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        top: 35%;
-      }
-
-      .right_link {
-        list-style-type: none;
-        float: right;
-      }
-
-      .page_list {
-        display: inline-block;
-        font-size: 24px;
-        color: white;
-        width: auto;
-        margin: 30px;
-        list-style: outside none none;
-      }
-
-      .grid_image img {
-        box-shadow: 5px 5px 20px 1px;
-        height: 400px;
-        margin: 20px;
-      }
-
-      .grid_image img:hover {
-        height: 600px;
-      }
-
-      #current {
-        color: #ffcc00;
-      }
-
-      #I_Block {
-        background: #232328;
-        box-shadow: 1px 0px 0px 2px #ffcc00;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        padding: 0px;
-      }
-
-      #paragraph {
-        margin-left: 10px;
-        margin-right: 10px;
-        padding-left: 100px;
-        padding-right: 100px;
-        padding-bottom: 20px;
-        text-align: center;
-        color: white;
-        font-size: 14px;
-        font-family: helveticaneue;
-      }
-
-      #nav_bar ul {
-        color: white;
-        background: #232328;
-        box-shadow: 0px 2px 0px 0px #ffcc00;
-        padding-inline-start: 0px;
-        margin-top: 0px;
-        font-size: 20px;
-      }
-
-      #nav_bar ul li {
-        display: inline-block;
-        padding: 12px 24px;
-      }
-
-      #nav_bar {
-        position: fixed;
-        z-index: 5;
-        width: 100%;
-      }
-
-      main {
-        font-family: times;
-      }
-
-      header {
-        font-family: times;
-      }
-
-      body {
-        margin: 0px;
-        background-image: url('Space_Background.jpg');
-        background-repeat: repeat;
-        background-size: contain;
-      }
-
-      .footer {
-        background-color: #ffcc00;
-        color: #232328;
-        width: auto;
-        padding: 30px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-auto-rows: minmax(20px, auto);
-        grid-template-areas:
-            "head head head"
-            "Line1-1 Line1-2 Line1-3"
-            "Line2-1 Line2-2 Line2-3"
-            "Line3-1 Line3-2 Line3-3"
-            "Contact Contact2 Contact3"
-            "Copyright Copyright2 Copyright3";
-        gap: 10px 10px;
-      }
-
-      #head {
-        grid-area: head;
-        font-size: 24px;
-        border-bottom: 1px solid #232328;
-      }
-      #row1 {
-        grid-area: Line1-1;
-      }
-      #row2 {
-        grid-area: Line2-1;
-      }
-      #row3 {
-        grid-area: Line3-1;
-      }
-      #row1-2 {
-        grid-area: Line1-2;
-      }
-      #row2-2 {
-        grid-area: Line2-2;
-      }
-      #phone {
-        grid-area: Contact2;
-      }
-      #email {
-        grid-area: Contact;
-      }
-      #insta {
-        grid-area: Contact3;
-      }
-    }
-
-    @media screen and (max-width: 599px) {
-      .gallery_pages {
-        padding: 0px;
-      }
-
-      .examples_title {
-        background-color: #232328;
-        border-top: 2px solid #ffcc00;
-        display: block;
-        margin: 0px;
-        height: 50px;
-      }
-
-      #workExamples {
-        color: white;
-        text-align: center;
-        padding-top: 10px;
-        margin: 0px;
-      }
-
-      .image_grid {
-        padding: 60px;
-        position: relative;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-      }
-
-      #selected {
-        display: inline-block;
-        color: rgba(0, 153, 153, 1);
-        background-color: rgba(56, 60, 71, 0.5);
-        border: 1px solid; padding: 10px;
-        font-size: 18px;
-        width: auto;
-        margin: 10px;
-        list-style: outside none none;
-      }
-
-      .left_link {
-        list-style-type: none;
-      }
-
-      #logo {
-        color: rgba(255, 204, 0, 0);
-        font-size: 24px;
-        display: none;
-        position: absolute;
-        left: 40%;
-        transform: translate(-30%, -50%);
-        top: 35%;
-      }
-
-      .right_link {
-        list-style-type: none;
-        float: right;
-      }
-
-      .page_list {
-        display: inline-block;
-        font-size: 18px;
-        color: white;
-        width: auto;
-        margin: 10px;
-        list-style: outside none none;
-      }
-
-      .grid_image img {
-        box-shadow: 5px 5px 20px 1px;
-        height: 300px;
-        margin: 30px;
-      }
-
-      .grid_image img:hover {
-        height: 400px;
-      }
-
-      #current {
-        color: #ffcc00;
-      }
-
-      #I_Block {
-        background: #232328;
-        box-shadow: 1px 0px 0px 2px #ffcc00;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        padding: 0px;
-      }
-
-      #paragraph {
-        margin-left: 10px;
-        margin-right: 10px;
-        padding-left: 30px;
-        padding-right: 30px;
-        padding-bottom: 20px;
-        text-align: center;
-        color: white;
-        font-size: 14px;
-        font-family: helveticaneue;
-      }
-
-      #nav_bar ul {
-        color: white;
-        background: #232328;
-        box-shadow: 0px 2px 0px 0px #ffcc00;
-        padding-inline-start: 0px;
-        margin-top: 0px;
-        font-size: 20px;
-      }
-
-      #nav_bar ul li {
-        display: inline-flex;
-        padding: 12px 24px;
-      }
-
-      #nav_bar {
-        position: fixed;
-        z-index: 5;
-        width: 100%;
-      }
-
-      main {
-        font-family: times;
-      }
-
-      header {
-        font-family: times;
-      }
-
-      body {
-        margin: 0px;
-        background-image: url('Space_Background.jpg');
-        background-repeat: repeat;
-        background-size: contain;
-      }
-
-      .footer {
-        background-color: #ffcc00;
-        font-size: 14px;
-        color: #232328;
-        width: auto;
-        padding: 40px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-auto-rows: minmax(20px, auto);
-        grid-template-areas:
-            "head head head"
-            "Line1-1 Line1-2 Line1-3"
-            "Line2-1 Line2-2 Line2-3"
-            "Line3-1 Line3-2 Line3-3"
-            "Contact Contact2 Contact3"
-            "Copyright Copyright2 Copyright3";
-        gap: 10px 10px;
-      }
-
-      #head {
-        grid-area: head;
-        font-size: 24px;
-        border-bottom: 1px solid #232328;
-      }
-      #row1 {
-        grid-area: Line1-1;
-      }
-      #row2 {
-        grid-area: Line2-1;
-      }
-      #row3 {
-        grid-area: Line3-1;
-      }
-      #row1-2 {
-        grid-area: Line1-2;
-      }
-      #row2-2 {
-        grid-area: Line2-2;
-      }
-      #phone {
-        grid-area: Contact2;
-      }
-      #email {
-        grid-area: Contact;
-      }
-      #insta {
-        grid-area: Contact3;
-      }
-    }
-  </style>
-
+    <link type="text/css" rel="stylesheet" href="css/Portfolio.css">
 </head>
 <body>
 
@@ -501,7 +124,7 @@
             Gallery -
             <a href="HomeIllustrator.html"
             style="text-decoration: none;
-            color: #232328;">
+            color: white;">
               Illustrator
             </a>
           </div>
@@ -509,7 +132,7 @@
             Gallery -
             <a href="HomePhotoshop.html"
             style="text-decoration: none;
-            color: #232328;">
+            color: white;">
               Photoshop
             </a>
           </div>
@@ -517,21 +140,21 @@
             Gallery -
             <a href="HomeIndesign.html"
             style="text-decoration: none;
-            color: #232328;">
+            color: white;">
               Indesign
             </a>
           </div>
           <div id="row1-2">
             <a href="Contact_Page.html"
             style="text-decoration: none;
-            color: #232328;">
+            color: white;">
               Contact
             </a>
           </div>
           <div id="row2-2">
             <a href="About_Me.html"
             style="text-decoration: none;
-            color: #232328;">
+            color: white;">
               About Me
             </a>
           </div>
