--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -32,8 +32,8 @@
 
         <main>
           <section id="contact-grid">
-            <h1 style="grid-area: head">Contact</h1>
-            <p style="grid-area: message">
+            <h1 style="grid-area: head; font-size: 32px;">Contact</h1>
+            <p style="grid-area: message;">
               Any questions, comments, or requests? Send me a message along with
               a way to contact you so that I may respond when I am available.
             </p>
