--- a/assignments/assignment17_Bootstrap.html
+++ b/assignments/assignment17_Bootstrap.html
@@ -65,14 +65,14 @@
 
     <div class="container-fluid mt-4">
       <div class="row">
-        <div class="col-sm-4">1</div>
-        <div class="col-sm-4">2</div>
-        <div class="col-sm-4">3</div>
+        <div class="col-md">1</div>
+        <div class="col-md">2</div>
+        <div class="col-md">3</div>
       </div>
       <div class="row">
-        <div class="col-2">A</div>
-        <div class="col-4">B</div>
-        <div class="col-6">C</div>
+        <div class="col-sm-2">A</div>
+        <div class="col-sm-4">B</div>
+        <div class="col-sm-6">C</div>
       </div>
       <div class="row">
         <div class="col-7">Yes</div>
@@ -80,9 +80,9 @@
         <div class="col-2">Maybe</div>
       </div>
       <div class="row">
-        <div class="col-3">Who?</div>
-        <div class="col-3">What?</div>
-        <div class="col-6">Where?</div>
+        <div class="col-sm-3">Who?</div>
+        <div class="col-sm-3">What?</div>
+        <div class="col-sm-6">Where?</div>
       </div>
     </div>
 
