--- a/index.html
+++ b/index.html
@@ -3,42 +3,43 @@
   <head>
     <title>Gemini Artworks Portfolio</title>
     <link type="text/css" rel="stylesheet" href="css/Portfolio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
 
     <!-- Portfolio title -->
     <header>
-        <nav id="nav_bar">
-            <ul>
-              <div id="logo">
-                Gemini Artworks
-              </div>
-              <li class="left_link" id="current">Home</li>
-              <li class="right_link">
-                <a href="About_Me.html" style="text-decoration: none; color: white;">
-                About Me
-                </a>
-              </li>
-              <li class="right_link">
-                <a href="Contact_Page.html" style="text-decoration: none; color: white;">
-                Contact
-                </a>
-              </li>
-            </ul>
-        </nav>
+      <nav id="nav_bar">
+        <div id="nav_whole">
+          <div id="logo">
+            Gemini Artworks
+          </div>
+          <div class="active" id="current">Home</div>
+          <div id="nav_links">
+            <div class="right_link" id="selection1">
+              <a href="About_Me.html" style="text-decoration: none; color: white;">
+              About Me
+              </a>
+            </div>
+            <div class="right_link" id="selection2">
+              <a href="Contact_Page.html" style="text-decoration: none; color: white;">
+              Contact
+              </a>
+            </div>
+          </div>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
+        </div>
+      </nav>
     </header>
 
     <main>
       <section>
         <br><br><br>
         <!-- Logo -->
-        <img src="Gemini_Artworks_Icon2.png" alt="Gemini Artworks Logo"
-        style="
-        height: 200px;
-        display: block;
-        margin: auto;
-        padding-top: 60px;
-        ">
+        <img src="Gemini_Artworks_Icon2.png" alt="Gemini Artworks Logo" id="top-logo">
         <br><br><br>
         <div id="I_Block">
           <h2 style="
@@ -67,11 +68,7 @@
           </h2>
         </div>
 
-        <div style="
-        border-top: 5px groove #ffcc00;
-        border-bottom: 5px groove #ffcc00;
-        background: linear-gradient(to top, rgba(56, 60, 71, 0.5), rgba(0, 0, 0, 0.5));
-        text-align: center;">
+        <div id="gallery">
           <ul class="gallery_pages">
             <li class="page_list" id="selected">Zodiac Project</li>
             <li class="page_list">
@@ -173,5 +170,9 @@
         </div>
       </div>
     </footer>
+
+
+
+    <script type="text/javascript" src="js/menu_external.js"></script>
   </body>
 </html>
