--- a/About_Me.html
+++ b/About_Me.html
@@ -15,7 +15,7 @@
           <div id="logo">
             Gemini Artworks
           </div>
-          <div class="active">
+          <div class="active" id="selection1">
             <a href="index.html" style="text-decoration: none; color: white;">
               Home
             </a>
@@ -24,7 +24,7 @@
             <div class="right_link" id="current">
               About Me
             </div>
-            <div class="right_link">
+            <div class="right_link" id="selection2">
               <a href="Contact_Page.html" style="text-decoration: none; color: white;">
               Contact
               </a>
