--- a/wp_themes/index.html
+++ b/wp_themes/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>Gemini Artworks Portfolio</title>
-    <link type="text/css" rel="stylesheet" href="../Portfolio/css/Portfolio.css">
+    <link type="text/css" rel="stylesheet" href="../css/Portfolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
@@ -178,6 +178,6 @@
 
 
 
-    <script type="text/javascript" src="../Portfolio/js/menu_external.js"></script>
+    <script type="text/javascript" src="../js/menu_external.js"></script>
   </body>
 </html>
