--- a/wp_themes/page.html
+++ b/wp_themes/page.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>HELLO WORLD</title>
-    <link type="text/css" rel="stylesheet" href="../Portfolio/css/Portfolio.css">
+    <link type="text/css" rel="stylesheet" href="../css/Portfolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
@@ -111,6 +111,6 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="../Portfolio/js/menu_external.js"></script>
+    <script type="text/javascript" src="../js/menu_external.js"></script>
   </body>
 </html>
